fix: added z-index to modal

--- a/src/scss/modal.scss
+++ b/src/scss/modal.scss
@@ -9,6 +9,7 @@
   flex-wrap: nowrap;
   cursor: pointer;
   user-select: none;
+  z-index: 10;
 
   > .modal-background {
     position: absolute;
